--- a/views/dish/insertDish.ejs
+++ b/views/dish/insertDish.ejs
@@ -109,7 +109,7 @@
                         </div>
                     </div>
 
-                    <input type="button" value="Añadir ingrediente" id="bSubmit">
+                    <input type="button"  class="btn btn-dark" value="Añadir ingrediente" id="bSubmit">
                 </div>
 
                 <script>
