--- a/views/dish/updateDish.ejs
+++ b/views/dish/updateDish.ejs
@@ -134,7 +134,7 @@
                         <% } %>
                     </div>
 
-                    <input type="button" value="Añadir ingrediente" id="bSubmit">
+                    <input type="button"  class="btn btn-dark" value="Añadir ingrediente" id="bSubmit">
                 </div>
 
                 <script>
