--- a/views/menu/insertMenu.ejs
+++ b/views/menu/insertMenu.ejs
@@ -84,7 +84,7 @@
 
                 </div>
                 <br>
-                <input type="button" value="Añadir plato" id="bSubmit">
+                <input type="button"  class="btn btn-dark" value="Añadir plato" id="bSubmit">
                 
 
 
